fix css to remove horizontal scrollbar

--- a/static/style/ImageStackWidget.css
+++ b/static/style/ImageStackWidget.css
@@ -13,7 +13,6 @@
 }
 
 .locationFrameLabelContainer {
-    padding-left: 20px;
     background: #f1f1f1;
     width: 100%;
     height: 48px;
